--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,9 @@
 				<br>
 				<input type="submit" value="Login" class='login'>
 			</form>
-			<input type="submit" value="Register" class='regis'>
+			<form class='form' method="post" action="/registerPage">
+				<input type="submit" value="Register Page" class='regis'>
+			</form>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <link rel="stylesheet" type="text/css" href="/css/style.css"/>
