--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,8 @@
 	<body>
 		<div id="gui" class='gui'>
 			<h1>Login or register an account</h1>
-			<form class='form' method="post" action="/login">
+			<div class='textArea'></div>
+			<form class='form' method="post" action="/logging">
 				<div>
 					<span>Username: </span>
 					<span><input name='userInput' class='userInput'></span>
