--- a/html/room.html
+++ b/html/room.html
@@ -2,17 +2,18 @@
 	<head>
 	</head>
 	<body>
+		<iframe width="0" height="0" border="0" name="dummyframe" id="dummyframe"></iframe>
 		<h1 id='header'>Chat</h1>
 		<div id="gui" class='gui'>
 			<div class='bottom'>
 				<div class='bottom'>
-					<form method='post' action='/sendMess'>
+					<form method='post' action='/sendMess' target="dummyframe">
 						<input id='input' class='bottom' name='message'>
 						<input type='submit'></input>
 					</form>
 				</div>
 			</div>
-			<div class='cells'>
+			<div id='cells' class='cells'>
 				<div class='cell'>
 					<div class='cellName'>
 						sda
