--- a/html/room.html
+++ b/html/room.html
@@ -7,7 +7,7 @@
 		<div id="gui" class='gui'>
 			<div class='bottom'>
 				<div class='bottom'>
-					<form method='post' action='/sendMess' target="dummyframe">
+					<form id='submitMess' method='post' action='/sendMess' target="dummyframe">
 						<input id='input' class='bottom' name='message'>
 						<input type='submit'></input>
 					</form>
